--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "vue-components",
+  "name": "@human37/vue-components",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
+    "build-bundle": "vue-cli-service build --target lib --name vue-components ./src/components/index.js",
     "lint": "vue-cli-service lint"
   },
+  "main": "./dist/vue-components.common.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass": "^1.45.1",
+    "sass-loader": "^10",
     "vue": "^3.0.0"
   },
   "devDependencies": {
