--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@human37/vue-components",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "core-js": "^3.6.5",
+    "mdi-vue": "^3.0.12",
     "sass": "^1.45.1",
     "sass-loader": "^10",
     "vue": "^3.0.0"
